--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<html>
-  <h1>meu primeiro arquivo no meu primeiro repositório. </h>1
-  <html>/
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+  <H1> Olá mundo </H1>  
+</body>
+</html>
